# uneval_static

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: error.rs  funcs.rs  lib.rs  ser.rs
test_fixtures/: data.toml
tests/: generate_and_use.rs  main.tpl  readme_sample.rs  test_cases.rs  user.tpl
