[package]
name = "uneval_static"
version = "0.1.0"
authors = ["me", "Cerber Ursi <dev+rust@cerbe.ru>"]
edition = "2021"
description = "Serde serializer to embed data as Rust code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cerber-Ursi/uneval"
categories = ["development-tools::build-utils"]

[dependencies]
phf_codegen = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0"

[dev-dependencies]
phf = "0.11.2"
regex = "1.10.4"
toml = "0.5"

trybuild = "1.0.96"
